test/langtools/tools/javac/valhalla/lworld-values/MiscThisLeak.out
MiscThisLeak.java:16:19: compiler.err.this.exposed.prematurely
MiscThisLeak.java:18:13: compiler.err.this.exposed.prematurely
MiscThisLeak.java:19:13: compiler.err.this.exposed.prematurely
3 errors
